style navigation bar

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <link rel="stylesheet" href="/src/portfolio.css" />
   </head>
   <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Mmaserufe</a>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-black">
+        <div class="container-fluid bg-black">
+          <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler bg-black"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -37,52 +37,62 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar bg-black text-white">Menu</span>
           </button>
           <div
             class="collapse navbar-collapse ms-5"
             id="navbarSupportedContent"
           >
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
-              </li>
-              <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/travel.html">Travel</a>
+              </li>
+              <li class="nav-item dropdown bg-black">
+                <a
+                  class="nav-link dropdown-toggle text-white"
+                  href="/media.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
                   Media
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-black">
                   <li>
-                    <a class="dropdown-item" href="/media/photography.hmtl"
-                      >Photography</a
+                    <a class="dropdown-item text-white" href="/media.html#blogs"
+                      >Blogs</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="/media/videos.html"
-                      >Videos</a
+                    <a
+                      class="dropdown-item text-white"
+                      href="/media.html#podcasts-playlist"
+                      >Podcasts and Playlists</a
                     >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a
-                      class="dropdown-item"
-                      href="/media/podcast-playlist-blogs.html"
-                      >Blog, Podcasts, Playlist</a
+                      class="dropdown-item text-white"
+                      href="/media.html#videos"
+                      >Videos</a
                     >
                   </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Travel</a>
+                <a class="nav-link text-white">Contact</a>
               </li>
             </ul>
           </div>
