modified contact navlink

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       src="https://kit.fontawesome.com/23a998ffc1.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/23a998ffc1.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/src/portfolio.css" />
   </head>
   <body>
@@ -92,7 +96,9 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white">Contact</a>
+                <a href="/about.html#contact" class="nav-link text-white"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
