wrap bio in a div

--- a/about.html
+++ b/about.html
@@ -28,72 +28,153 @@
     <link rel="stylesheet" href="/src/portfolio.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <h3 class="my-name">Mmaserufe Sekalo</h3>
-      <div class="bio">
-        <div class="biography">
-          <p class="short bio">
-            Mmaserufe Sekalo, is young creative born and raised in the northern
-            province, Limpopo, South Africa. Mmaserufe graduated with a degree
-            in agriculture before going into the multi facetted creative work.
-            Since graduation, Mmaserufe enjoyed living on the road for work,
-            which involved mostly local travel and international travel until
-            June 2022.
-          </p>
-          <p class="hobbies">
-            Outside work, Mmaserufe enjoys meeting new people, running and
-            playing games
-          </p>
-          <p class="achievements">
-            Some of Mmaserufe's achievement include recent nomination for World
-            Food Programme Summit 2022 as Aafrica's Brightest Young Mind
-            intended formulate solutions to Feed the Future, in partnership with
-            BYM.
-          </p>
-        </div>
-
-        <h1 class="mantras-and-song">Mmaserufe lives by:</h1>
-        <div class="row">
-          <div class="col-sm-6">
-            <img
-              src="https://i.pinimg.com/564x/b4/df/1c/b4df1c8a8b90ff0dc2d80d1bc6628264.jpg"
-              class="img-fluid"
-              alt="motivational qoute"
-            />
+    <div class="container-fluid-sm">
+         <nav class="navbar navbar-expand-lg bg-black">
+        <div class="container-fluid bg-black">
+          <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
+          <button
+            class="navbar-toggler bg-black"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar bg-black text-white">Menu</span>
+          </button>
+          <div
+            class="collapse navbar-collapse ms-5"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/travel.html">Travel</a>
+              </li>
+              <li class="nav-item dropdown bg-black">
+                <a
+                  class="nav-link dropdown-toggle text-white"
+                  href="/media.html"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Media
+                </a>
+                <ul class="dropdown-menu bg-black">
+                  <li>
+                    <a class="dropdown-item text-white" href="/media.html#blogs"
+                      >Blogs</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item text-white"
+                      href="/media.html#podcasts-playlist"
+                      >Podcasts and Playlists</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a
+                      class="dropdown-item text-white"
+                      href="/media.html#videos"
+                      >Videos</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="/about.html#contact" class="nav-link text-white"
+                  >Contact</a
+                >
+              </li>
+            </ul>
           </div>
-
-          <div class="col-sm-6">
-            <iframe
-              style="border-radius: 12px"
-              src="https://open.spotify.com/embed/track/37aN1lF5x0njiE5vnAMI9G?utm_source=generator&theme=0"
-              width="100%"
-              frameborder="0"
-              allowfullscreen=""
-              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-              loading="lazy"
-            ></iframe>
-          </div>
         </div>
-        <div class="conta"><h2>Contact</h2>
-         <div class="contact-details" id="contact">
-          <span class="linkedin"
-            ><a href="https://www.linkedin.com/in/mmaserufe-sekalo-51427812b/"
-              ><i class="fa-brands fa-linkedin"></i></a
-          ></span>
-          <span class="instagram"
-            ><a href="https://instagram.com/maserufec?igshid=YmMyMTA2M2Y="
-              ><i class="fa-brands fa-instagram"></i></a
-          ></span>
-          <span class="github"
-            ><a href="https://github.com/MmaserufeSekalo"
-              ><i class="fa-brands fa-github"></i></a
-          ></span>
-          <span class="email"
-            ><a href="mailto:maserufec@gmail.com"
-              ><i class="fa-solid fa-envelopes-bulk"></i></a
-          ></span>
-        </div></div>
+      </nav>
+      <div class="ditaba sm">
        
+        <div class="bio">
+          <div class="biography">
+            <p class="short bio">
+              Mmaserufe Sekalo, is young creative born and raised in the
+              northern province, Limpopo, South Africa. Mmaserufe graduated with
+              a degree in agriculture before going into the multi facetted
+              creative work. Since graduation, Mmaserufe enjoyed living on the
+              road for work, which involved mostly local travel and
+              international travel until June 2022.
+            </p>
+            <p class="hobbies">
+              Outside work, Mmaserufe enjoys meeting new people, running and
+              playing games
+            </p>
+            <p class="achievements">
+              Some of Mmaserufe's achievement include recent nomination for
+              World Food Programme Summit 2022 as Aafrica's Brightest Young Mind
+              intended formulate solutions to Feed the Future, in partnership
+              with BYM.
+            </p>
+          </div>
+          <div class="motor">
+            <h1 class="mantras-and-song">Mmaserufe lives by:</h1>
+            <div class="row">
+              <div class="col-sm-6">
+                <img
+                  src="https://i.pinimg.com/564x/b4/df/1c/b4df1c8a8b90ff0dc2d80d1bc6628264.jpg"
+                  class="img-fluid"
+                  alt="motivational qoute"
+                />
+              </div>
+
+              <div class="col-sm-6">
+                <iframe
+                  style="border-radius: 12px"
+                  src="https://open.spotify.com/embed/track/37aN1lF5x0njiE5vnAMI9G?utm_source=generator&theme=0"
+                  
+                  frameborder="0"
+                  allowfullscreen=""
+                  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                  loading="lazy"
+                ></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="conta">
+            <h2>Contact</h2>
+            <div class="contact-details" id="contact">
+              <span class="linkedin"
+                ><a
+                  href="https://www.linkedin.com/in/mmaserufe-sekalo-51427812b/"
+                  ><i class="fa-brands fa-linkedin"></i></a
+              ></span>
+              <span class="instagram"
+                ><a href="https://instagram.com/maserufec?igshid=YmMyMTA2M2Y="
+                  ><i class="fa-brands fa-instagram"></i></a
+              ></span>
+              <span class="github"
+                ><a href="https://github.com/MmaserufeSekalo"
+                  ><i class="fa-brands fa-github"></i></a
+              ></span>
+              <span class="email"
+                ><a href="mailto:maserufec@gmail.com"
+                  ><i class="fa-solid fa-envelopes-bulk"></i></a
+              ></span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
