--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar bg-black text-white">Menu</span>
+            <span class="navbar-static bg-black navbar-position text-white">Menu</span>
           </button>
           <div
             class="collapse navbar-collapse ms-5"
