added media to photos folder

--- a/about.html
+++ b/about.html
@@ -73,6 +73,11 @@
                   Media
                 </a>
                 <ul class="dropdown-menu bg-black">
+                   <li>
+                    <a class="dropdown-item text-white" href="/photography.html"
+                      >Photography</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item text-white" href="/media.html#blogs"
                       >Blogs</a
@@ -121,7 +126,7 @@
             </p>
             <p class="achievements">
               Some of Mmaserufe's achievement include recent nomination for
-              World Food Programme Summit 2022 as Aafrica's Brightest Young Mind
+              World Food Programme Summit 2022 as Africa's Brightest Young Mind
               intended formulate solutions to Feed the Future, in partnership
               with BYM.
             </p>
