photography content added

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   </head>
   <body>
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-black">
+     <nav class="navbar navbar-expand-lg bg-black">
         <div class="container-fluid bg-black">
           <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
           <button
-            class="navbar-toggler bg-black"
+            class="navbar-toggler bg-black navbar-position"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -41,7 +41,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-static bg-black navbar-position text-white">Menu</span>
+            <span class="navbar bg-black text-white">Menu</span>
           </button>
           <div
             class="collapse navbar-collapse ms-5"
@@ -73,6 +73,11 @@
                   Media
                 </a>
                 <ul class="dropdown-menu bg-black">
+                   <li>
+                    <a class="dropdown-item text-white" href="/photography.html"
+                      >Photography</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item text-white" href="/media.html#blogs"
                       >Blogs</a
