--- a/travel.html
+++ b/travel.html
@@ -33,7 +33,7 @@
         <div class="container-fluid bg-black">
           <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
           <button
-            class="navbar-toggler bg-black"
+            class="navbar-toggler bg-black navbar-position"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -73,6 +73,11 @@
                   Media
                 </a>
                 <ul class="dropdown-menu bg-black">
+                   <li>
+                    <a class="dropdown-item text-white" href="/photography.html"
+                      >Photography</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item text-white" href="/media.html#blogs"
                       >Blogs</a
