--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/src/portfolio.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg bg-black">
         <div class="container-fluid bg-black">
           <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
