--- a/photography.html
+++ b/photography.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photography Work</title>
-       <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
@@ -25,15 +25,163 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/portfolio.css" />
-</head>
-<body>
-   <div class="container">
-    <div class="heading">My photography work Est.2018</div>
-    <div class="row">
-        <div class="col-sm">
-            <img src="/photos/LRM_EXPORT_149098238082223_20190610_184125021.jpeg" alt="">
+  </head>
+  <body>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-black">
+        <div class="container-fluid bg-black">
+          <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
+          <button
+            class="navbar-toggler bg-black navbar-position"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar bg-black text-white">Menu</span>
+          </button>
+          <div
+            class="collapse navbar-collapse ms-5"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/travel.html">Travel</a>
+              </li>
+              <li class="nav-item dropdown bg-black">
+                <a
+                  class="nav-link dropdown-toggle text-white"
+                  href="/media.html"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Media
+                </a>
+                <ul class="dropdown-menu bg-black">
+                  <li>
+                    <a class="dropdown-item text-white" href="/photography.html"
+                      >Photography</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-white" href="/media.html#blogs"
+                      >Blogs</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item text-white"
+                      href="/media.html#podcasts-playlist"
+                      >Podcasts and Playlists</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a
+                      class="dropdown-item text-white"
+                      href="/media.html#videos"
+                      >Videos</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="/about.html#contact" class="nav-link text-white"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
     </div>
-   </div>
-</body>
+    <div class="container">
+      <div class="heading">
+        <h3>Prints</h3>
+        <h5><em>since</em></h5>
+        <h1>2018.</h1>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <img
+            src="/photos/thato-engineering.JPG"
+            class="img-fluid"
+            alt="face of a woman"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="/photos/thato-close-up.JPG"
+            class="img-fluid"
+            alt="female muse"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="/photos/samina.jpg"
+            class="img-fluid"
+            alt="woman close up picture"
+          />
+        </div>
+        <div class="col-sm">
+          <img src="/photos/samina-mic.jpg" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <img
+            src="/photos/kid-smiling.jpg"
+            class="img-fluid"
+            alt="kid-smiling"
+          />
+        </div>
+        <div class="col-sm">
+          <img src="/photos/kid.jpg" class="img-fluid" alt="kids playing" />
+        </div>
+        <div class="col-sm">
+          <img src="/photos/two.jpg" class="img-fluid" alt="two kids smiling" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <img
+            src="/photos/madelief-light.jpg"
+            class="img-fluid"
+            alt="chandelier"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="/photos/current-wallpaper.jpg"
+            class="img-fluid"
+            alt="wine glass"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="/photos/lowlight-respublica-window.jpg"
+            class="img-fluid"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="footer">
+        <small><p>Mmaserufe Sekalo 2023</p></small>
+      </div>
+    </div>
+  </body>
 </html>
