Changed navigation bar

--- a/photography.html
+++ b/photography.html
@@ -27,85 +27,17 @@
     <link rel="stylesheet" href="/src/portfolio.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-black">
-        <div class="container-fluid bg-black">
-          <a class="navbar-brand text-white" href="/index.html">Mmaserufe.</a>
-          <button
-            class="navbar-toggler bg-black navbar-position"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar bg-black text-white">Menu</span>
-          </button>
-          <div
-            class="collapse navbar-collapse ms-5"
-            id="navbarSupportedContent"
-          >
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active text-white"
-                  aria-current="page"
-                  href="/index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/travel.html">Travel</a>
-              </li>
-              <li class="nav-item dropdown bg-black">
-                <a
-                  class="nav-link dropdown-toggle text-white"
-                  href="/media.html"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Media
-                </a>
-                <ul class="dropdown-menu bg-black">
-                  <li>
-                    <a class="dropdown-item text-white" href="/photography.html"
-                      >Photography</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item text-white" href="/media.html#blogs"
-                      >Blogs</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item text-white"
-                      href="/media.html#podcasts-playlist"
-                      >Podcasts and Playlists</a
-                    >
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a
-                      class="dropdown-item text-white"
-                      href="/media.html#videos"
-                      >Videos</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a href="/about.html#contact" class="nav-link text-white"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
+    <div class="container">
+              <nav class="d-flex justify-content-between">
+        <div class="my-name"><h4>Mmaserufe.</h4></div>
+        <div class="menu-list">
+          <ul>
+            <li ><a href="/index.html">Home</a></li>
+            <li ><a href="/about.html">About</a> </li>
+            <li><a href="/travel.html"> Travel</a></li>
+            <li ><a href="/media.html">Media</a></li>
+            <li><a href="/about.html#contact">Contact</a> </li>
+          </ul>
         </div>
       </nav>
     </div>
